welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: value XOR is not a member of Boolean
  (a>= 13 & a<= 19) XOR (b<=19 & b>=13) } 
                    ^